deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eno
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eno
  template:
    metadata:
      labels:
        app: eno
    spec:
      containers:
        - name: eno
          image: opherogel/eno-ws:latest
