ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eno
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - dev.insee.io
  rules:
    - host: dev.insee.io
      http:
        paths:
          - path: /
            backend:
              serviceName: eno
              servicePort: http
